--- a/Popcorn4/app/build.gradle
+++ b/Popcorn4/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 
 buildscript {
@@ -9,7 +11,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.2.0'
+        // Don't touch it.
+        classpath 'com.google.gms:google-services:4.3.0'
     }
 }
 
@@ -38,7 +41,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -48,6 +51,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
+    // Room db
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
 
     // RX java
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -78,13 +86,42 @@ dependencies {
 
     // GIF image
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
-    implementation 'com.airbnb.android:lottie:2.0.0-rc1'
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:3.0.7'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-database:18.0.0'
-    implementation 'com.google.firebase:firebase-storage:18.0.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-database:19.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+
+    // FCM
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 
     // paging
     implementation "android.arch.paging:runtime:1.0.1"
+
+    // To make app compatible for older version
+    implementation "com.android.support:support-compat:28.0.0"
+
+    // Dagger 2
+    implementation 'com.google.dagger:dagger:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
+
+    // Dagger android.
+    implementation 'com.google.dagger:dagger-android:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
+
+    // Dagger support
+    implementation 'com.google.dagger:dagger-android-support:2.23.2'
+
+    // Swipe to delete.
+    implementation 'com.android.support:design:28.0.0'
+    implementation "androidx.core:core-ktx:1.1.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
+}
+repositories {
+    mavenCentral()
 }
