--- a/Popcorn4/app/src/main/AndroidManifest.xml
+++ b/Popcorn4/app/src/main/AndroidManifest.xml
@@ -16,6 +16,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--For firebase messaging service-->
+        <!--Set custom default icon. This is used when no icon is set for incoming notification messages.-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_popcorn" />
+
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
+        <!--Defining your default notification channel id-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel"
+            android:value="@string/pop_corn_channel_name"/>
+
+
         <!-- Activities -->
         <activity
             android:name=".moviedetails.MovieDetailsActivity"
@@ -25,10 +44,30 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".customeviews.CustomActivity" />
+        <activity android:name=".fvrtmovies.FvrtMovieActivity" />
+
+        <service
+            android:name=".services.GPSService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name= "com.androidbook.services.GPSService.SERVICE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".notifications.FBNotificationService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
