--- a/Popcorn4/app/build.gradle
+++ b/Popcorn4/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     // Room db
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
 
@@ -72,7 +72,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     //Chuck
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
@@ -99,10 +99,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
 
     // paging
-    implementation "android.arch.paging:runtime:1.0.1"
+    implementation 'android.arch.paging:runtime:1.0.1'
 
     // To make app compatible for older version
-    implementation "com.android.support:support-compat:28.0.0"
+    implementation 'com.android.support:support-compat:28.0.0'
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.23.2'
@@ -117,10 +117,22 @@ dependencies {
 
     // Swipe to delete.
     implementation 'com.android.support:design:28.0.0'
-    implementation "androidx.core:core-ktx:1.1.0"
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    // Work manager
+    implementation 'androidx.work:work-runtime:2.2.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
+    // Google analytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    // Deeplink
+    implementation 'com.airbnb:deeplinkdispatch:4.1.0'
+    annotationProcessor 'com.airbnb:deeplinkdispatch-processor:4.1.0'
+
+    // Event bus
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
 repositories {
     mavenCentral()
