--- a/Popcorn4/app/build.gradle
+++ b/Popcorn4/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 buildscript {
@@ -25,6 +26,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        androidExtensions {
+            experimental = true
+        }
     }
     buildTypes {
         release {
@@ -32,6 +37,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     buildToolsVersion '28.0.3'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -48,18 +54,18 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
 
     // Retrofit & OkHttp
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
 
     // Room db
     implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
 
     // RX java
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
     // recycler view
     implementation 'com.android.support:recyclerview-v7:28.0.0'
@@ -69,10 +75,10 @@ dependencies {
 
     // Butter knife:
     implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    kapt 'com.jakewharton:butterknife-compiler:10.1.0'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //Chuck
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
@@ -91,12 +97,12 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.0.7'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-core:17.2.0'
-    implementation 'com.google.firebase:firebase-database:19.1.0'
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-core:17.3.0'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
     // FCM
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.4'
 
     // paging
     implementation 'android.arch.paging:runtime:1.0.1'
@@ -105,37 +111,47 @@ dependencies {
     implementation 'com.android.support:support-compat:28.0.0'
 
     // Dagger 2
-    implementation 'com.google.dagger:dagger:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
+    implementation 'com.google.dagger:dagger:2.24'
+    kapt 'com.google.dagger:dagger-compiler:2.23.2'
 
     // Dagger android.
     implementation 'com.google.dagger:dagger-android:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.23.2'
 
     // Dagger support
     implementation 'com.google.dagger:dagger-android-support:2.23.2'
 
     // Swipe to delete.
     implementation 'com.android.support:design:28.0.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Work manager
-    implementation 'androidx.work:work-runtime:2.2.0'
+    implementation 'androidx.work:work-runtime:2.3.4'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
-    // Google analytics
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    // firbase analytics
+    // implementation 'com.google.firebase:firebase-analytics:17.2.3'
 
     // Deeplink
     implementation 'com.airbnb:deeplinkdispatch:4.1.0'
-    annotationProcessor 'com.airbnb:deeplinkdispatch-processor:4.1.0'
+    kapt 'com.airbnb:deeplinkdispatch-processor:4.1.0'
 
     // Event bus
     implementation 'org.greenrobot:eventbus:3.1.1'
 
     // shared prefs:
     implementation 'com.pixplicity.easyprefs:library:1.9.0'
+
+    //google analytics:
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
+
+    //memory leak monitoring
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+
+
+    //work manager
+    implementation "android.arch.work:work-runtime-ktx: 1.0.0-beta02"
 
 }
 repositories {
