--- a/Popcorn4/build.gradle
+++ b/Popcorn4/build.gradle
@@ -2,14 +2,15 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext.butterknife_version = '10.1.0'
     repositories {
         google()
         jcenter()
         mavenCentral()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
