--- a/Popcorn4/app/build.gradle
+++ b/Popcorn4/app/build.gradle
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         // Don't touch it.
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
@@ -43,6 +43,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+// To inline the bytecode built with JVM target 1.8 into
+// bytecode that is being built with JVM target 1.6. (e.g. navArgs)
+
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -50,6 +57,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
 
@@ -79,6 +92,8 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
 
     //Chuck
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
@@ -97,12 +112,21 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.0.7'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-core:17.3.0'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-core:17.4.0'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
+
+    //anko
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
 
     // FCM
-    implementation 'com.google.firebase:firebase-messaging:20.1.4'
+    implementation 'com.google.firebase:firebase-messaging:20.1.6'
 
     // paging
     implementation 'android.arch.paging:runtime:1.0.1'
@@ -149,9 +173,24 @@ dependencies {
     //memory leak monitoring
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
-
     //work manager
-    implementation "android.arch.work:work-runtime-ktx: 1.0.0-beta02"
+    implementation "android.arch.work:work-runtime-ktx:1.0.1"
+
+    implementation 'com.google.firebase:firebase-inappmessaging-display:19.0.6'
+    implementation 'com.google.guava:guava:27.0.1-android'
+
+    // groupie: recylerview
+    implementation "com.xwray:groupie:2.0.3"
+    implementation "com.xwray:groupie-kotlin-android-extensions:2.0.3"
+
+    // jetpack compose:
+    implementation 'androidx.ui:ui-framework:0.1.0-dev10'
+    implementation 'androidx.ui:ui-tooling:0.1.0-dev10'
+    implementation 'androidx.ui:ui-layout:0.1.0-dev10'
+    implementation 'androidx.ui:ui-material:0.1.0-dev10'
+
+    // ExoPlayer
+    implementation "com.google.android.exoplayer:exoplayer:2.10.0"
 
 }
 repositories {
