--- a/Popcorn4/build.gradle
+++ b/Popcorn4/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.butterknife_version = '10.1.0'
+    ext.anko_version='0.10.4'
     repositories {
         google()
         jcenter()
         mavenCentral()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife_version"
