--- a/Popcorn4/app/src/main/AndroidManifest.xml
+++ b/Popcorn4/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".moviedetails.MovieDetailsActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
-        <activity android:name=".HomeActivity">
+        <activity android:name=".mediaplayer.MediaPlayerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -29,6 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".mediaplayer.MediaPlayerService" />
     </application>
 
 </manifest>
