--- a/Popcorn4/app/build.gradle
+++ b/Popcorn4/app/build.gradle
@@ -32,8 +32,12 @@ android {
         }
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+        }
+
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -45,7 +49,6 @@ android {
     }
 // To inline the bytecode built with JVM target 1.8 into
 // bytecode that is being built with JVM target 1.6. (e.g. navArgs)
-
 
     kotlinOptions {
         jvmTarget = "1.8"
@@ -192,6 +195,9 @@ dependencies {
 
     // ExoPlayer
     implementation "com.google.android.exoplayer:exoplayer:2.10.0"
+
+    //google play service
+    implementation "com.google.android.gms:play-services-location:17.0.0"
 
 }
 
