--- a/Popcorn4/build.gradle
+++ b/Popcorn4/build.gradle
@@ -6,8 +6,6 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
@@ -23,6 +21,9 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
